--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,8 +33,8 @@ body {
   line-height: 65px;
   overflow: hidden;
   transform: translateY(100%);
-  -webkit-animation: text-to-top 1s ease forwards;
-          animation: text-to-top 1s ease forwards;
+  -webkit-animation: to-top 1s ease forwards;
+          animation: to-top 1s ease forwards;
 }
 .landing .title-container div:nth-child(1) p {
   -webkit-animation-delay: 0.5s;
@@ -43,6 +43,28 @@ body {
 .landing .title-container div:nth-child(2) p {
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
+}
+.landing .title-container .bouton {
+  height: 50px;
+  width: 50px;
+  border: 2px solid rgb(255, 230, 192);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  filter: opacity(0);
+  animation: opacity 1.5s forwards ease, pulse infinite 1s ease alternate-reverse;
+  transform-origin: center;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  cursor: pointer;
+}
+.landing .title-container .bouton .circle {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: rgb(255, 230, 192);
 }
 
 .main {
@@ -58,7 +80,7 @@ body {
   transform: translateY(0%);
 }
 
-@-webkit-keyframes text-to-top {
+@-webkit-keyframes to-top {
   0% {
     transform: translateY(100%);
   }
@@ -67,11 +89,43 @@ body {
   }
 }
 
-@keyframes text-to-top {
+@keyframes to-top {
   0% {
     transform: translateY(100%);
   }
   100% {
     transform: translateY(0%);
+  }
+}
+@-webkit-keyframes opacity {
+  0% {
+    filter: opacity(0);
+  }
+  100% {
+    filter: opacity(1);
+  }
+}
+@keyframes opacity {
+  0% {
+    filter: opacity(0);
+  }
+  100% {
+    filter: opacity(1);
+  }
+}
+@-webkit-keyframes pulse {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1.1, 1.1);
+  }
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1.1, 1.1);
   }
 }/*# sourceMappingURL=style.css.map */
